[package]
name = "agisostack-rs"
version = "0.0.1"
edition = "2021"
authors = ["Thom de Jong <https://github.com/Thom-de-Jong>"]
description = "Rust wrapper for the AgIsoStack++ library by Adrian Del Grosso"
keywords = ["isobus", "iso11783", "j1939", "can", "canbus"]
categories = ["api-bindings"]

license = "MIT"
homepage = "https://github.com/Thom-de-Jong/AgIsoStack-rs"
documentation = "https://docs.rs/AgIsoStack-rs"
repository = "https://github.com/Thom-de-Jong/AgIsoStack-rs"
readme = "README.md"

[dependencies]
agisostack-rs-sys = "0.0.1"
