[package]
name = "agisostack-rs"
version = "0.0.1"
edition = "2021"
authors = ["Thom de Jong <https://github.com/Thom-de-Jong>"]
description = "Rust wrapper for the AgIsoStack++ library by Adrian Del Grosso"
keywords = ["isobus", "iso11783", "j1939", "can", "canbus"]
categories = ["api-bindings"]

license = "MIT AND Apache-2.0"
homepage = "https://github.com/Thom-de-Jong/AgIsoStack-rs"
documentation = "https://docs.rs/AgIsoStack-rs"
repository = "https://github.com/Thom-de-Jong/AgIsoStack-rs"
readme = "README.md"

[dependencies]
agisostack-sys = { path = "agisostack-sys" }
pcan-basic = { version = "1.0.2", optional = true }
socketcan = { version = "1.7.0", optional = true }
lazy_static = "1.4.0"
embedded-can = "0.4.1"

[features]
default = ["std", "mock_can_driver", "log_can"]
win32 = ["std", "peak_can_driver", "log_can"]
cm4 = ["std", "socket_can_driver"]

# Driver options
std = []
peak_can_driver = ["pcan-basic"]
mock_can_driver = []
socket_can_driver = ["socketcan"]

# Logging options
log_can = ["log_can_read", "log_can_write"]
log_all_can = ["log_all_can_read", "log_can_write"]
log_can_write = []
log_can_read = []
log_all_can_read = []
